[package]
name = "echorustnif_native"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "echorustnif_native"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.22.0-rc.0"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
once_cell = "1.2.0"
tokio = { version = "1.0.1", features = ["rt", "rt-multi-thread", "sync"] }